--- a/src/ensembl/src/styles/main.scss
+++ b/src/ensembl/src/styles/main.scss
@@ -4,6 +4,7 @@
 
 @include foundation-global-styles;
 @include foundation-prototype-classes;
+@include foundation-visibility-classes;
 
 a {
   color: $ens-blue;
